--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,8 +39,8 @@ dependencies:
   shared_preferences: ^2.2.3
   dio: ^5.5.0+1
   provider: ^6.1.2
-  image_picker: ^1.1.2
-  image_gallery_saver: ^2.0.3
+  camera: ^0.11.0+2
+  flutter_oss_aliyun: ^6.4.2
 
 dev_dependencies:
   flutter_test:
