--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -48,12 +48,13 @@ android {
         applicationId = "com.sailingfor.sailing_mobile"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
-        minSdk = flutter.minSdkVersion
+        // minSdk = flutter.minSdkVersion
+        minSdkVersion = 21
         targetSdk = flutter.targetSdkVersion
         // versionCode = flutterVersionCode.toInteger()
         // versionName = flutterVersionName
-        versionCode = 2
-        versionName = "test_1.0.1"
+        versionCode = 5
+        versionName = "test_1.0.4"
     }
     signingConfigs {
         release {
