--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,8 +1,10 @@
 allprojects {
+    ext.kotlin_version = '1.7.10'
     repositories {
         google()
         mavenCentral()
     }
+
 }
 
 rootProject.buildDir = "../build"
