--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   native_device_orientation: ^2.0.3
   permission_handler: ^11.3.1
   app_settings: ^5.1.1
+  camerawesome: ^2.1.0
 
 dev_dependencies:
   flutter_test:
